CREATE SEQUENCE IF NOT EXISTS events_id_seq1 INCREMENT BY 1;

CREATE SEQUENCE IF NOT EXISTS files_id_seq1 INCREMENT BY 1;

CREATE SEQUENCE IF NOT EXISTS users_seq INCREMENT BY 50;

CREATE TABLE events
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name        VARCHAR(250)                             NOT NULL,
    description TEXT                                     NOT NULL,
    CONSTRAINT pk_events PRIMARY KEY (id)
);

CREATE TABLE files
(
    id       INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    event_id INTEGER                                  NOT NULL,
    name     VARCHAR(255)                             NOT NULL,
    CONSTRAINT pk_files PRIMARY KEY (id)
);

CREATE TABLE flyway_schema_history
(
    installed_rank INTEGER       NOT NULL,
    version        VARCHAR(50),
    description    VARCHAR(200)  NOT NULL,
    type           VARCHAR(20)   NOT NULL,
    script         VARCHAR(1000) NOT NULL,
    checksum       INTEGER,
    installed_by   VARCHAR(100)  NOT NULL,
    installed_on   TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW() NOT NULL,
    execution_time INTEGER       NOT NULL,
    success        BOOLEAN       NOT NULL,
    CONSTRAINT flyway_schema_history_pk PRIMARY KEY (installed_rank)
);

CREATE TABLE users
(
    id       INTEGER      NOT NULL,
    login    VARCHAR(255) NOT NULL,
    password VARCHAR(255) NOT NULL,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

CREATE INDEX flyway_schema_history_s_idx ON flyway_schema_history (success);

ALTER TABLE files
    ADD CONSTRAINT fk_files_on_event FOREIGN KEY (event_id) REFERENCES events (id) ON DELETE NO ACTION;